# desafio_bh

./: .gitignore  README.md  data_viz.ipynb  main.py  pyproject.toml  requirements.txt  test.py  test2.py
models/: __init__.py  extract.py  load.py  transform.py
models/db/: .envexample  docker-compose.yaml  postgres.py  tables.py
